<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ui.UserActivity"
android:background="@color/purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/edit_take_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:hint="@string/whats_name"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/button_save_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="#626200EE"/>

</RelativeLayout>